--- a/client/src/shared/navigation/MainNavigation.css
+++ b/client/src/shared/navigation/MainNavigation.css
@@ -17,7 +17,7 @@
   margin: 0 auto;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   position: relative;
 }
 @keyframes social_in {
@@ -44,6 +44,9 @@
 }
 .navbar_email {
   font-family: var(--primary-font);
+  display: flex;
+  align-items: center;
+  column-gap: 4px;
   color: var(--primary-color);
 }
 @media only screen and (max-width: 1000px) {
